# loregen

./: langgraph.json  pyproject.toml
.github/workflows/: docker-push-image.yml  frontend-apply.yml  frontend-destroy.yml  frontend-rotate.yml
dockerfiles/: Dockerfile.dashboard.single
src/backend/sample/: graph.py  tools.py
src/frontend/: app.py  dashboard.py
src/frontend/terraform/: alb.tf  backend-prod.conf  callback_api_gw.tf  ecs_dashboard.tf  env.tf  main.tf  vars.tf
src/loregen/backend/character/: __init__.py  configuration.py  graph.py  state.py  tools.py
src/loregen/backend/city/: configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
src/loregen/backend/common/: __init__.py
src/loregen/backend/country/: configuration.py  graph.py  state.py  tools.py
src/loregen/backend/family/: __init__.py  configuration.py  graph.py  state.py  tools.py
src/loregen/backend/history_character/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
src/loregen/backend/history_city/: configuration.py  graph.py  prompts.py  state.py  tools.py
src/loregen/backend/history_country/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
src/loregen/backend/history_family/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
src/loregen/backend/history_world/: configuration.py  graph.py  prompts.py  state.py  tools.py
src/loregen/backend/narratives_from_history_city/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
src/loregen/backend/narratives_from_history_country/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
src/loregen/backend/narratives_from_history_family/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
src/loregen/backend/narratives_from_history_world/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
src/loregen/backend/sample/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
src/loregen/backend/world/: __init__.py  graph.py  state.py  (+2 more)
src/loregen/frontend/: app.py  common.py  dashboard.py  state_manager.py  temp_state.save
(+10 files in other folders)
