[project]
name = "loregen"
version = "0.1.0"
description = ""
authors = [
    {name = "ishish.io",email = "ts@ishish.io"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "gradio (>=5.25.2,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langgraph-sdk (>=0.1.61,<0.2.0)",
    "typing-extensions (>=4.13.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
